# organicursos

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  index.html  instalar-cachyos.sh  instalar.desktop  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
docs/: architecture.md  commercial-readiness.md  licensing.md  platform-distribution.md  release-checklist.md  roadmap.md  sales-playbook.md
fixtures/: ffprobe-sample.json  sample-subtitles.vtt
src-tauri/: Cargo.toml  OrganiCursos.appdata.xml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_search.sql  0003_vec.sql  0004_ai.sql  0005_settings.sql  0006_commercial.sql
src-tauri/resources/sqlite-vec/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  app.rs  bookmarks.rs  commercial.rs  covers.rs  embeddings.rs  library.rs  maintenance.rs  mod.rs  notes.rs  player.rs  search.rs  settings.rs  system.rs
src-tauri/src/db/: mod.rs  repositories.rs
src-tauri/src/export/: mod.rs
src-tauri/src/indexing/: fingerprint.rs  mod.rs  parser.rs  service.rs
src-tauri/src/jobs/: queue.rs
src-tauri/src/license/: mod.rs
src-tauri/src/media/: ffmpeg.rs  ffprobe.rs  mod.rs  subtitles.rs
src-tauri/src/models/: api.rs
src-tauri/src/search/: mod.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: media_server.rs  mod.rs  pathing.rs  storage.rs
src-tauri/src/watchers/: mod.rs
(+78 files in other folders)
