[package]
name = "atlas-courses"
version = "0.1.0"
description = "OrganiCursos desktop app"
authors = ["Francisco López Velázquez <f.lopezvelazquez@ugto.mx>"]
license = "MIT"
homepage = "https://zolvek-mx.web.app"
repository = "https://github.com/f-lopez-velazquez/organicursos"
edition = "2021"

[lib]
name = "atlas_courses_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
notify = "8.0"
once_cell = "1.21"
parking_lot = "0.12"
pdf-extract = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["chrono", "load_extension", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.0.0"
thiserror = "2.0"
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
walkdir = "2.5"
zip = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
